# poc-python-socketio-ns

./: .gitignore  README.md  pyproject.toml
client/: index.html
poc/: __main__.py
server/: __main__.py
